<resources>
    <string name="app_name">Audio player</string>
    <string name="image">image</string>
    <string name="album_art_dir">content://media/external/audio/albumart</string>
    <string name="now_playing">Now playing</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="automatic">Automatic</string>
    <string name="select_default_theme">Select default theme</string>
    <string name="theme_mode_sub_text">change the look and feel as per your preferences</string>
    <string name="zero_time">00:00</string>
    <string name="refresh_title">Refresh media library for new content</string>
    <string name="refresh_subtitle">we look into every corner for some new tunes you got</string>
</resources>