<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.SettingsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">


            <LinearLayout
                android:id="@+id/theme_mode_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/current_theme_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/image"
                    android:src="@drawable/ic_theme_mode_night"
                    app:tint="?colorPrimary" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/nunito_sans"
                        android:text="@string/select_default_theme"
                        android:textColor="@color/colorTextHigh"
                        android:textSize="@dimen/text_big" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/nunito_sans"
                        android:text="@string/theme_mode_sub_text"
                        android:textColor="@color/colorTextMed"
                        android:textSize="@dimen/text_big_med" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/chip_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <com.google.android.material.chip.Chip
                    android:id="@+id/auto_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/automatic"
                    app:chipIcon="@drawable/ic_theme_mode_auto" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/night_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/dark"
                    app:chipIcon="@drawable/ic_theme_mode_night" />


                <com.google.android.material.chip.Chip
                    android:id="@+id/light_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/light"
                    app:chipIcon="@drawable/ic_theme_mode_light" />

            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/accent_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:visibility="gone" />





            <LinearLayout
                android:id="@+id/refresh_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/image"
                    android:src="@drawable/ic_refresh"
                    app:tint="?colorPrimary" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/nunito_sans"
                        android:text="@string/refresh_title"
                        android:textColor="@color/colorTextHigh"
                        android:textSize="@dimen/text_big" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/nunito_sans"
                        android:text="@string/refresh_subtitle"
                        android:textColor="@color/colorTextMed"
                        android:textSize="@dimen/text_big_med" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>